--- a/code/.htaccess
+++ b/code/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /roles_usuarios/index.php/$1 [L]
-ErrorDocument 404 /roles_usuarios/index.php
+RewriteRule ^(.*)$ /code/index.php/$1 [L]
+ErrorDocument 404 /code/index.php
